--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduVerset</title>
+    <title>EduVerse</title>
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/15109/15109434.png" type="image/x-icon" id="tk">
     <style>
         body {
